@@ -21,12 +21,14 @@ import org.key_project.logic.Name;
 import org.key_project.logic.Named;
 import org.key_project.logic.Namespace;
 import org.key_project.logic.op.Function;
+import org.key_project.logic.op.Operator;
 import org.key_project.logic.sort.Sort;
 import org.key_project.util.ExtList;
 import org.key_project.util.collection.ImmutableArray;
 import org.key_project.util.collection.ImmutableList;
 import org.key_project.util.collection.ImmutableSLList;
 
+import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 
 
@@ -41,6 +43,7 @@ public final class HeapLDT extends LDT {
 
     public static final Name SELECT_NAME = new Name("select");
     public static final Name STORE_NAME = new Name("store");
+    public static final Name FINAL_NAME = new Name("final");
     public static final Name BASE_HEAP_NAME = new Name("heap");
     public static final Name SAVED_HEAP_NAME = new Name("savedHeap");
     public static final Name PERMISSION_HEAP_NAME = new Name("permissions");
@@ -54,30 +57,31 @@ public final class HeapLDT extends LDT {
 
     // select/store
     private final SortDependingFunction select;
-    private final JFunction store;
-    private final JFunction create;
-    private final JFunction anon;
+    private final SortDependingFunction finalFunction;
+    private final Function store;
+    private final Function create;
+    private final Function anon;
     private final Function memset;
 
     // fields
-    private final JFunction arr;
-    private final JFunction created;
-    private final JFunction initialized;
+    private final Function arr;
+    private final Function created;
+    private final Function initialized;
     private final SortDependingFunction classPrepared;
     private final SortDependingFunction classInitialized;
     private final SortDependingFunction classInitializationInProgress;
     private final SortDependingFunction classErroneous;
 
     // length
-    private final JFunction length;
+    private final Function length;
 
     // null
     private final JFunction nullFunc;
 
     // predicates
-    private final JFunction wellFormed;
-    private final JFunction acc;
-    private final JFunction reach;
+    private final Function wellFormed;
+    private final Function acc;
+    private final Function reach;
     private final Function prec;
 
     // heap pv
@@ -91,12 +95,14 @@ public final class HeapLDT extends LDT {
 
     public HeapLDT(TermServices services) {
         super(NAME, services);
-        final Namespace<Sort> sorts = services.getNamespaces().sorts();
-        final Namespace<IProgramVariable> progVars = services.getNamespaces().programVariables();
+        final Namespace<@NonNull Sort> sorts = services.getNamespaces().sorts();
+        final Namespace<@NonNull IProgramVariable> progVars =
+            services.getNamespaces().programVariables();
 
         fieldSort = sorts.lookup(new Name("Field"));
         select = addSortDependingFunction(services, SELECT_NAME.toString());
-        store = addFunction(services, "store");
+        finalFunction = addSortDependingFunction(services, FINAL_NAME.toString());
+        store = addFunction(services, STORE_NAME.toString());
         create = addFunction(services, "create");
         anon = addFunction(services, "anon");
         memset = addFunction(services, "memset");
@@ -153,7 +159,8 @@ public final class HeapLDT extends LDT {
      * @param className the class name
      * @param attributeName the attribute name
      */
-    public record SplitFieldName(String className, String attributeName) {}
+    public record SplitFieldName(String className, String attributeName) {
+    }
 
     /**
      * Splits a field name.
@@ -233,6 +240,29 @@ public final class HeapLDT extends LDT {
         return select.getInstanceFor(instanceSort, services);
     }
 
+    /**
+     * Returns the function symbol to access final fields for the given instance sort.
+     *
+     * @param instanceSort the sort of the value to be read
+     * @param services the services to find/create the sort-depending function
+     * @return the function symbol to access final fields for the given instance sort
+     */
+    public @NonNull SortDependingFunction getFinal(@NonNull Sort instanceSort,
+            @NonNull Services services) {
+        return finalFunction.getInstanceFor(instanceSort, services);
+    }
+
+    /**
+     * Check if the given operator is an instance of the "final" function to access final fields.
+     *
+     * @param op the operator to check
+     * @return true if the operator is an instance of the "X::final" srot-depending function
+     */
+    public boolean isFinalOp(Operator op) {
+        return op instanceof SortDependingFunction
+                && ((SortDependingFunction) op).isSimilar(finalFunction);
+    }
+
 
     /**
      * If the passed operator is an instance of "select", this method returns the sort of the
@@ -252,17 +282,17 @@ public final class HeapLDT extends LDT {
     }
 
 
-    public JFunction getStore() {
+    public Function getStore() {
         return store;
     }
 
 
-    public JFunction getCreate() {
+    public Function getCreate() {
         return create;
     }
 
 
-    public JFunction getAnon() {
+    public Function getAnon() {
         return anon;
     }
 
@@ -272,43 +302,43 @@ public final class HeapLDT extends LDT {
     }
 
 
-    public JFunction getArr() {
+    public Function getArr() {
         return arr;
     }
 
 
-    public JFunction getCreated() {
+    public Function getCreated() {
         return created;
     }
 
 
-    public JFunction getInitialized() {
+    public Function getInitialized() {
         return initialized;
     }
 
 
-    public JFunction getClassPrepared(Sort instanceSort, TermServices services) {
+    public Function getClassPrepared(Sort instanceSort, TermServices services) {
         return classPrepared.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getClassInitialized(Sort instanceSort, TermServices services) {
+    public Function getClassInitialized(Sort instanceSort, TermServices services) {
         return classInitialized.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getClassInitializationInProgress(Sort instanceSort,
+    public Function getClassInitializationInProgress(Sort instanceSort,
             TermServices services) {
         return classInitializationInProgress.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getClassErroneous(Sort instanceSort, TermServices services) {
+    public Function getClassErroneous(Sort instanceSort, TermServices services) {
         return classErroneous.getInstanceFor(instanceSort, services);
     }
 
 
-    public JFunction getLength() {
+    public Function getLength() {
         return length;
     }
 
@@ -318,17 +348,17 @@ public final class HeapLDT extends LDT {
     }
 
 
-    public JFunction getWellFormed() {
+    public Function getWellFormed() {
         return wellFormed;
     }
 
 
-    public JFunction getAcc() {
+    public Function getAcc() {
         return acc;
     }
 
 
-    public JFunction getReach() {
+    public Function getReach() {
         return reach;
     }
 
@@ -370,12 +400,12 @@ public final class HeapLDT extends LDT {
      * the appropriate symbol does not yet exist in the namespace, this method creates and adds it
      * to the namespace as a side effect.
      */
-    public JFunction getFieldSymbolForPV(LocationVariable fieldPV, Services services) {
+    public Function getFieldSymbolForPV(LocationVariable fieldPV, Services services) {
         assert fieldPV.isMember();
         assert fieldPV != services.getJavaInfo().getArrayLength();
 
         final Name name = new Name(getFieldSymbolName(fieldPV));
-        JFunction result = services.getNamespaces().functions().lookup(name);
+        Function result = services.getNamespaces().functions().lookup(name);
         if (result == null) {
             int index = name.toString().indexOf("::");
             assert index > 0;
@@ -456,7 +486,7 @@ public final class HeapLDT extends LDT {
 
 
     @Override
-    public JFunction getFunctionFor(de.uka.ilkd.key.java.expression.Operator op, Services serv,
+    public Function getFunctionFor(de.uka.ilkd.key.java.expression.Operator op, Services serv,
             ExecutionContext ec) {
         assert false;
         return null;
@@ -473,18 +503,18 @@ public final class HeapLDT extends LDT {
     public Expression translateTerm(Term t, ExtList children, Services services) {
         if (t.op() instanceof SortDependingFunction
                 && ((SortDependingFunction) t.op()).isSimilar(select)) {
-            ProgramVariable heap = (ProgramVariable) children.remove(0);
+            ProgramVariable heap = (ProgramVariable) children.removeFirst();
             if (heap != getHeap()) {
                 throw new IllegalArgumentException("Can only translate field access to base heap.");
             }
-            ReferencePrefix prefix = (ReferencePrefix) children.remove(0);
-            ProgramVariable field = (ProgramVariable) children.remove(0);
+            ReferencePrefix prefix = (ReferencePrefix) children.removeFirst();
+            ProgramVariable field = (ProgramVariable) children.removeFirst();
 
             if (prefix instanceof NullLiteral) {
                 return new FieldReference(field, null);
             }
             return new FieldReference(field, prefix);
-        } else if (t.sort() == getFieldSort() && t.op() instanceof JFunction
+        } else if (t.sort() == getFieldSort() && t.op() instanceof Function
                 && ((Function) t.op()).isUnique()) {
             return services.getJavaInfo().getAttribute(getPrettyFieldName(t.op()),
                 getClassName((Function) t.op()));
